--- a/src/Component.css
+++ b/src/Component.css
@@ -29,14 +29,14 @@ body {
   }
   
   .button-container button {
-    margin-right: 10px; /* Espacio entre los botones */
+    margin-right: 10px; 
     padding: 10px 20px;
     background-color: #f8f8f8;
     border: 1px solid #ccc;
     border-radius: 4px;
     cursor: pointer;
     font-size: 16px;
-    color: black; /* Color del texto del botón */
+    color: black; 
   }
   
   .button-container button:hover {
@@ -63,7 +63,6 @@ body {
   .menu-item {
     background-color: #ffff;
     padding: 20px;
-    border-radius: 0px;
     display: flex;
     flex: 1 0 48%; 
     max-width: 48%;
@@ -82,7 +81,6 @@ body {
   .menu-image {
     width: 200px;
     height: 150px;
-    border-radius: 0px;
   }
 
   .menu-details {
